[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Sunset.tres" type="Environment" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=3]
[ext_resource path="res://Assets/Raleway-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/LeftHand_11_26.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Left Hand.gd" type="Script" id=6]
[ext_resource path="res://Assets/Display_Text.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/Controller.gd" type="Script" id=8]
[ext_resource path="res://Assets/Pause_Text.tres" type="DynamicFont" id=9]

[sub_resource type="CapsuleShape" id=19]
height = 3.0

[sub_resource type="DynamicFont" id=51]
size = 43
outline_color = Color( 0.25098, 0.12549, 0.843137, 1 )
font_data = ExtResource( 4 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=37]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=38]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=39]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=40]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=41]
albedo_color = Color( 0.968627, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=42]
albedo_color = Color( 0.968627, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=43]
albedo_color = Color( 0.968627, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0.968627, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=28]
albedo_color = Color( 0, 1, 0.180392, 1 )

[sub_resource type="SpatialMaterial" id=44]
albedo_color = Color( 0, 1, 0.180392, 1 )

[sub_resource type="SpatialMaterial" id=45]
albedo_color = Color( 0, 1, 0.180392, 1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0, 1, 0.180392, 1 )

[sub_resource type="SpatialMaterial" id=46]
albedo_color = Color( 0.0313726, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=47]
albedo_color = Color( 0.0313726, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=48]
albedo_color = Color( 0.0313726, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=49]
albedo_color = Color( 0.686275, 0, 1, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="LeftHand_11_26" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="Display_Screen" type="ColorRect" parent="LeftHand_11_26"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="LeftHand_11_26/Display_Screen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -42.0
margin_right = 10.0
margin_bottom = -6.0
custom_fonts/normal_font = ExtResource( 7 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_input" type="RichTextLabel" parent="LeftHand_11_26/Display_Screen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -84.0
margin_right = 10.0
margin_bottom = -52.0
custom_fonts/normal_font = ExtResource( 7 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 2.5 )
visible = false
script = ExtResource( 8 )

[node name="Head" type="Spatial" parent="Controller"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Controller/Head"]

[node name="CollisionShape" type="CollisionShape" parent="Controller"]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, -0.5, 0, 0.5, -2.18557e-08, 0, 0, 0 )
shape = SubResource( 19 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOverlay" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="RichTextLabel" parent="Pause/MenuOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
bbcode_text = "[center][rainbow freq=0.1]Menu - [tornado]Paused[/tornado][/rainbow]

Press [rainbow freq=0.1]Esc[/rainbow] to open or close menu

Press [rainbow freq=0.1]I[/rainbow] to open or close instructions when paused[/center]"
text = "Menu - Paused

Press Esc to open or close menu

Press I to open or close instructions when paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsOverlay" type="ColorRect" parent="Pause"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="text" type="RichTextLabel" parent="Pause/InstructionsOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 51 )
text = "- Press I to return to the menu or Esc to unpause
- Use WASD and ZC to move on the XZ and Y axis
- Use the mouse to control the camera 
- Press E to change viewing mode 
- Frame mode displays one frame at a time
- Bone mode rotates one bone at a time
- The up and down arrow keys change the time between frames
- The left and right arrow keys change the time between bones
- Press K to toggle keypoint visibility"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Objects" type="Node" parent="."]

[node name="Sunset" type="WorldEnvironment" parent="Objects"]
environment = ExtResource( 1 )

[node name="Floor" type="MeshInstance" parent="Objects"]
transform = Transform( 5, 0, 0, 0, 0.1, 0, 0, 0, 5, 0, -2, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="Keypoint_View" type="Spatial" parent="Objects"]

[node name="wrist" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="thumb_tip" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 37 )

[node name="thumb_dst" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 38 )

[node name="thumb_pxm" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 39 )

[node name="thumb_mcp" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 40 )

[node name="index_tip" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 41 )

[node name="index_dst" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 42 )

[node name="index_int" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 43 )

[node name="index_pxm" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 29 )

[node name="middle_tip" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 28 )

[node name="middle_dst" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 44 )

[node name="middle_int" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 45 )

[node name="middle_pxm" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 10 )

[node name="ring_tip" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 46 )

[node name="ring_dst" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 47 )

[node name="ring_int" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 48 )

[node name="ring_pxm" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 48 )

[node name="little_tip" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 49 )

[node name="little_dst" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 49 )

[node name="little_int" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 49 )

[node name="little_pxm" type="MeshInstance" parent="Objects/Keypoint_View"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 49 )
